cleanup & move entrypoint to seperate script file