@@ -13,12 +13,13 @@ RUN adduser java --system
 
 WORKDIR /buildtools
 
-RUN chown java /buildtools
+COPY ./entrypoint.sh entrypoint.sh
+
+RUN chown -Rf java /buildtools && \
+    chmod +x entrypoint.sh
 
 USER java
 
 RUN mkdir ./output
 
-ENTRYPOINT  wget -O BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar && \
-            java -Xmx$MEMORY -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar BuildTools.jar --rev $SPIGOT_VERSION && \
-            mv ./spigot-*.jar ./output/
+ENTRYPOINT ["/buildtools/entrypoint.sh"]
